@@ -19,7 +19,12 @@ val micronautPlatformVersion = libs.versions.micronaut.platform.get()
 
 repositories {
     mavenCentral()
-    maven("https://jitpack.io")
+    maven {
+        url = uri("https://central.sonatype.com/repository/maven-snapshots/")
+        mavenContent {
+            snapshotsOnly()
+        }
+    }
 }
 
 dependencies {
@@ -29,8 +34,10 @@ dependencies {
 
     implementation(libs.micronaut.picocli)
     implementation(libs.micronaut.serde.jackson)
-    implementation(libs.clique)
-    implementation(libs.clique.themes)
+    implementation(platform(libs.tamboui.bom))
+    implementation(libs.tamboui.toolkit)
+    implementation(libs.tamboui.jline3.backend)
+    implementation(libs.tamboui.panama.backend)
 
     runtimeOnly(libs.logback.classic)
 
@@ -89,7 +96,9 @@ graalvmNative {
             imageName.set("ocp")
             mainClass.set("com.github.alvarosanchez.ocp.command.OcpCommand")
             buildArgs.add("--no-fallback")
-            buildArgs.add("-H:IncludeResources=META-INF/ocp/version.txt")
+            buildArgs.add("--enable-monitoring=jfr")
+            buildArgs.add("--enable-native-access=ALL-UNNAMED")
+            buildArgs.add("-H:IncludeResources=META-INF/ocp/version.txt|dev/tamboui/tui/bindings/.*\\.properties")
         }
         named("test") {
             buildArgs.add("--initialize-at-build-time=org.junit.platform.commons.logging.LoggerFactory\$DelegatingLogger")
